--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     package="top.buend.androidtools">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:name=".AppApplication"
@@ -22,7 +24,8 @@
         </activity>
         <activity android:name=".ToolsActivity" />
         <activity android:name=".AppMsgToolsActivity" />
-        <activity android:name=".NetToolsActivity"></activity>
+        <activity android:name=".NetToolsActivity" />
+        <activity android:name=".DeviceMsgToolsActivity"></activity>
     </application>
 
 </manifest>
