--- a/config.gradle
+++ b/config.gradle
@@ -3,7 +3,7 @@ ext {
     android = [
             compileSdkVersion: 30,
             buildToolsVersion: "30.0.3",
-            applicationId    : "com.goldze.mvvmhabit",
+            applicationId    : " ",
             minSdkVersion    : 16,
             targetSdkVersion : 30,
             versionCode      : 1,
