--- a/hmvvm/src/main/AndroidManifest.xml
+++ b/hmvvm/src/main/AndroidManifest.xml
@@ -8,8 +8,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:name=".MyApp"
         android:theme="@style/Theme.HAndroid">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.main.MainActivity">
+
+        </activity>
+        <activity android:name=".ui.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
