--- a/hmvvm/build.gradle
+++ b/hmvvm/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.see99.hmvvm"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -43,9 +43,12 @@ dependencies {
 //    testImplementation 'junit:junit:4.+'
 //    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
 //    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+
 
     //dagger
     implementation 'com.google.dagger:dagger:2.33'
+    implementation project(path: ':toolslibrary')
     annotationProcessor 'com.google.dagger:dagger-compiler:2.24'
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.24'
 
